<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Birds Species Classification</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_faq">FAQ</string>
    <string name="title_feedback">Feedback</string>
    <string name="ChangeTo">Languages</string>
    <string name="en" translatable="false">English</string>
    <string name="hi" translatable="false">हिन्दी</string>
    <string name="te" translatable="false">తెలుగు</string>
    <string name="language">English</string>
    <string name="details">DETAILS</string>
    <string name="detailssummary">Accurately classify bird species using advanced machine learning algorithms. Our professional app allows you to upload an image file and get the bird species name instantly.</string>
    <string name="features">FEATURES</string>
    <string name="keyfeatures">Key Features</string>
    <string name="imageupload">Image Upload</string>
    <string name="imageuploadsummary">Upload your bird photos for quick identification.</string>
    <string name="classification">Classification</string>
    <string name="classificationsummary">Get the name of the bird species based on the uploaded image</string>
    <string name="accurateresults">Accurate Results</string>
    <string name="accurateresultssummary">Receive accurate classification results for various bird species</string>
    <string name="userfriendlyinterface">User-Friendly Interface</string>
    <string name="userfrindlyinterfacesummary">Easily navigate and use the app for bird species classification</string>
    <string name="birdsspeciesgallary">Birds Species Gallary</string>
    <string name="birdsspeciesgallarysummary">Exploring the stunning variety of bird species</string>
    <string name="americanrobin">American Robin</string>
    <string name="americanrobinsummary">Scientific Name: Turdus migratorius</string>
    <string name="housesparrow">House Sparrow</string>
    <string name="housesparrowsummary">Scientific Name: Passer domesticus</string>
    <string name="americanflamingo">American flamingo</string>
    <string name="americanflamingosummary">Scientific Name: Phoenicopterus ruber</string>
    <string name="indianroller">Indian Roller</string>
    <string name="indianrollersummary">Scientific Name: Coracias benghalensis</string>
    <string name="baldeagle">Bald Eagle</string>
    <string name="baldeaglesummary">Scientific Name: Haliaeetus leucocephalus</string>
    <string name="commongrackle">Common Grackle</string>
    <string name="commongracklesummary">Scientific Name: Quiscalus quiscula</string>
    <string name="submit">Submit</string>
    <string name="or">OR</string>
    <string name="search">Search</string>
    <string name="nofilechosen">No file chosen</string>
    <string name="givefeedback">Give Feedback</string>
    <string name="feedbackque">What do you think of our Birds Species Classification app?</string>
    <string name="rateapp">We would like your thoughts on our app</string>
    <string name="feedback">Enter your feedback here</string>
    <string name="problem">May we follow up with you for the issue you are facing?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="get">Submit</string>
    <string name="faq">FAQ</string>
    <string name="commonquestions">Common Questions</string>
    <string name="Herearesomeofthemostcommonquestions">Here are some of the most common questions that we get</string>
    <string name="firstque">How does the bird species classification app work?</string>
    <string name="firstans">The app uses advanced machine learning algorithms to analyze the uploaded image and classify it into the corresponding bird species.</string>
    <string name="secondque">What types of image files can be uploaded?</string>
    <string name="secondans">The app accepts commonly used image file formats such as JPEG, PNG, and GIF.</string>
    <string name="thirdque">Is there a limit on the file size for image uploads?</string>
    <string name="thirdtans">Yes, the maximum file size for image uploads is 10MB.</string>
    <string name="fourque">Can I upload multiple images at once? </string>
    <string name="fourans">No, currently the app only supports uploading one image at a time</string>
    <string name="fifthque">How accurate is the bird species classification?</string>
    <string name="fifthans">The classification accuracy depends on various factors such as image quality and similarity between bird species.</string>




</resources>