<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="birds.species.birdsspeciesclassification.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home"
        />

    <fragment
        android:id="@+id/navigation_search"
        android:name="birds.species.birdsspeciesclassification.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_faq"
        android:name="birds.species.birdsspeciesclassification.ui.faq.FAQFragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/navigation_feedback"
        android:name="birds.species.birdsspeciesclassification.ui.feedback.FeedbackFragment"
        android:label="@string/title_feedback"
        tools:layout="@layout/fragment_feedback" />

</navigation>