<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginBottom="40dp"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/faq_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faq"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/common_questions_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/commonquestions"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/faq_title"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/common_questions_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/Herearesomeofthemostcommonquestions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/common_questions_subtitle"
            android:layout_marginTop="8dp"
            tools:ignore="HardcodedText" />

        <!-- Existing CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/question_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/common_questions_description">

            <!-- Content inside the existing CardView -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/question_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/question_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/firstque"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/expand_arrow"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/down" />

                </LinearLayout>

                <TextView
                    android:id="@+id/answer_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/firstans"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- New CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/new_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/question_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/question_container1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/question_text1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/secondque"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/expand_arrow1"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/down" />

                </LinearLayout>

                <TextView
                    android:id="@+id/answer_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/secondans"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Second New CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/new_card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/new_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/question_container2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/question_text2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/thirdque"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/expand_arrow2"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/down" />
                </LinearLayout>

                <TextView
                    android:id="@+id/answer_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thirdtans"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Third New CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/new_card3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/new_card2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/question_container3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/question_text3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fourque"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/expand_arrow3"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/down" />
                </LinearLayout>

                <TextView
                    android:id="@+id/answer_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fourans"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Fourth New CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/new_card4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/new_card3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/question_container4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/question_text4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fifthque"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/expand_arrow4"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/down" />
                </LinearLayout>

                <TextView
                    android:id="@+id/answer_text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fifthans"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/new_card5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            android:layout_marginBottom="50dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/new_card4">
            <!-- Just given to show the last line which was not visible due to some constraint -->
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
